Remove profile & add methods
